tests/ui/feature-gates/feature-gate-cfg_sanitize.rs
#[cfg(not(sanitize = "thread"))]
//~^ ERROR `cfg(sanitize)` is experimental
fn main() {}
